deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  namespace: springcloud
  labels:
    framework: springcloud
    app: springcloud-eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      springcloud: eureka
  template:
    metadata:
      labels:
        springcloud: eureka
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port:   '8761'
        prometheus.io/path: '/actuator/prometheus'
    spec:
      containers:
        - name: app
          image: kshwnahr/eureka-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: springcloud
spec:
  selector:
    springcloud: eureka
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  #type: LoadBalancer
  #externalIPs: - 192.168.0.10
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eureka
  namespace: springcloud
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    external-dns.alpha.kubernetes.io/target: home.proxy.camp
spec:
  rules:
    - host: eureka.cluster.camp
      http:
        paths:
          - path: /
            backend:
              serviceName: eureka
              servicePort: 8761
