hystrix_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hystrix
  namespace: springcloud
  labels:
    framework: springcloud
    app: springcloud-hystrix
spec:
  replicas: 1
  selector:
    matchLabels:
      springcloud: hystrix
  template:
    metadata:
      labels:
        springcloud: hystrix
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port:   '80'
        prometheus.io/path: '/actuator/prometheus'
    spec:
      containers:
        - name: app
          image: kshwnahr/hystrix-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hystrix
  namespace: springcloud
spec:
  selector:
    springcloud: hystrix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hystrix
  namespace: springcloud
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    external-dns.alpha.kubernetes.io/target: home.proxy.camp
spec:
  rules:
    - host: hystrix.cluster.camp
      http:
        paths:
          - path: /
            backend:
              serviceName: hystrix
              servicePort: 80
